[package]
name = "msgpack_script"
version = "0.1.0"
authors = ["Colin O'Brien <cobrien@rapid7.com>"]

[dependencies]
rmp = "*"
rmpv = "*"
rmp-serde = "0.13.*"
serde_json = "1.0.2"
serdeconv = "0.3.0"
serde = "1.0.2"
spmc = "0.2.*"
libflate = "0.1"
clap = "2.*.*"
walkdir = "1.0.7"
ignore = "0.2.*"
threadpool = "1.5.0"
num_cpus = "1.6.2"
two-lock-queue = "*"
